--- a/src/styles/Formulario.css
+++ b/src/styles/Formulario.css
@@ -213,3 +213,95 @@ body {
     color: #285a8e;
     text-decoration: underline;
 }
+
+/* Formulario.css */
+.search-bar {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
+  
+  .search-bar input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .search-bar button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .search-bar button:hover {
+    background-color: #0056b3;
+  }
+  
+  .restaurant-list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+  }
+  
+  .restaurant-card {
+    padding: 20px;
+    border: 1px solid #ffffff;
+    border-radius: 4px;
+    background-color: #000000;
+  }
+  
+  .restaurant-card h2 {
+    margin: 0 0 10px 0;
+  }
+  
+  .restaurant-card p {
+    margin: 5px 0;
+  }
+  
+  /* Formulario.css */
+.user-page, .post-restaurant {
+    padding: 20px;
+  }
+  
+  .user-page ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .user-page li {
+    margin: 10px 0;
+  }
+  
+  .post-restaurant form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .post-restaurant input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .post-restaurant button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .post-restaurant button:hover {
+    background-color: #0056b3;
+  }
+  
